# icicle

./: .gitignore  Cargo.toml  flake.nix  package.nix
.sqlx/: query-4fe73037caaf0893944f7c9247cb28cceb8d22c8fe23c4643d222b025c1e9138.json  query-837cbdcb157c977f7facf0ea99b9bdc5338e7864f7378accfa7027d67ab5b62f.json  query-99f03c171677fae1bf1a7a9010b2a0c1db8816befa51a7d0915e114567dbb05e.json
config/: default.toml
migrations/: 20250101000001_initial_schema.sql
scripts/: mock-webhook.sh
src/: config.rs  main.rs
src/cache/: mod.rs
src/dashboard/: mod.rs
src/db/: mod.rs
src/executor/: mod.rs
src/nix/: mod.rs
src/webhook/: mod.rs
templates/: dashboard.html
