[package]
name = "icicle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
askama = "0.12"
tower-http = { version = "0.6", features = ["fs"] }
tokio-tungstenite = "0.24"
config = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
chrono = "0.4"
